refactor: null verification in musical phrase methods